--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@web3-react/walletlink-connector": "^6.2.13",
     "animate.css": "^4.1.1",
     "bignumber.js": "^9.1.1",
+    "body-parser": "^1.20.2",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "cross-env": "^7.0.3",
@@ -121,6 +122,7 @@
     "framer-motion": "^10.15.0",
     "graphql": "^16.7.1",
     "lodash": "^4.17.21",
+    "mongodb": "^6.3.0",
     "next": "^12.2.5",
     "next-seo": "^6.1.0",
     "next-unused": "^0.0.6",
